refactor FullMapScreen to use CustomAppBar and simplify layout

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,1 +1,102 @@
-{}
+{
+  "app_name": "تطبيق ذكي",
+  "welcome": "مرحباً",
+  "welcome_back": "مرحباً بعودتك",
+  "hello_user": "مرحباً، المستخدم!",
+  "sign_in": "تسجيل الدخول",
+  "sign_up": "إنشاء حساب",
+  "sign_out": "تسجيل الخروج",
+  "forgot_password": "هل نسيت كلمة المرور؟",
+  "reset_password": "إعادة تعيين كلمة المرور",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "confirm_password": "تأكيد كلمة المرور",
+  "username": "اسم المستخدم",
+  "phone_number": "رقم الهاتف",
+  "address": "العنوان",
+  "city": "المدينة",
+  "country": "الدولة",
+  "language": "اللغة",
+  "dark_mode": "الوضع الداكن",
+  "light_mode": "الوضع الفاتح",
+  "system_default": "إعداد النظام الافتراضي",
+  "notifications": "الإشعارات",
+  "privacy": "الخصوصية",
+  "help": "المساعدة",
+  "security": "الأمان",
+  "two_factor_auth": "المصادقة الثنائية",
+  "enable_biometric": "تفعيل تسجيل الدخول بالبصمة",
+  "location_access": "السماح بالوصول إلى الموقع",
+  "storage_permission": "إذن الوصول للتخزين",
+  "camera_permission": "إذن الكاميرا",
+  "microphone_permission": "إذن الميكروفون",
+  "push_notifications": "إشعارات الدفع",
+  "email_notifications": "إشعارات البريد الإلكتروني",
+  "sms_notifications": "إشعارات الرسائل القصيرة",
+  "profile": "الملف الشخصي",
+  "edit_profile": "تعديل الملف الشخصي",
+  "view_profile": "عرض الملف الشخصي",
+  "change_password": "تغيير كلمة المرور",
+  "delete_account": "حذف الحساب",
+  "account_settings": "إعدادات الحساب",
+  "app_settings": "إعدادات التطبيق",
+  "app_theme": "سمة التطبيق",
+  "appearance": "المظهر",
+  "font_size": "حجم الخط",
+  "color_scheme": "نظام الألوان",
+  "feedback": "ملاحظات المستخدم",
+  "help_center": "مركز المساعدة",
+  "faq": "الأسئلة الشائعة",
+  "contact_us": "اتصل بنا",
+  "send_message": "إرسال رسالة",
+  "rate_app": "قيّم التطبيق",
+  "share_app": "شارك التطبيق",
+  "terms_conditions": "الشروط والأحكام",
+  "privacy_policy": "سياسة الخصوصية",
+  "choose_language": "اختر اللغة",
+  "about_app": "حول التطبيق",
+  "version": "الإصدار",
+  "update_available": "تحديث متوفر",
+  "download_update": "تنزيل التحديث",
+  "check_for_updates": "التحقق من وجود تحديثات",
+  "no_internet": "لا يوجد اتصال بالإنترنت",
+  "retry": "إعادة المحاولة",
+  "loading": "جاري التحميل...",
+  "save": "حفظ",
+  "cancel": "إلغاء",
+  "delete": "حذف",
+  "ok": "موافق",
+  "yes": "نعم",
+  "no": "لا",
+  "next": "التالي",
+  "back": "رجوع",
+  "done": "تم",
+  "apply": "تطبيق",
+  "search": "بحث",
+  "filter": "تصفية",
+  "sort": "فرز",
+  "open": "فتح",
+  "close": "إغلاق",
+  "error": "خطأ",
+  "success": "تم بنجاح",
+  "warning": "تحذير",
+  "info": "معلومة",
+  "confirm_action": "هل أنت متأكد أنك تريد المتابعة؟",
+  "session_expired": "انتهت صلاحية الجلسة. يرجى تسجيل الدخول مرة أخرى.",
+  "login_failed": "فشل تسجيل الدخول. يرجى التحقق من البيانات.",
+  "network_error": "حدث خطأ في الشبكة. حاول مرة أخرى.",
+  "upload_image": "رفع صورة",
+  "take_photo": "التقاط صورة",
+  "choose_from_gallery": "اختيار من المعرض",
+  "submit": "إرسال",
+  "continue": "متابعة",
+  "view_more": "عرض المزيد",
+  "view_less": "عرض أقل",
+  "notifications_settings": "إعدادات الإشعارات",
+  "general_settings": "الإعدادات العامة",
+  "language_settings": "إعدادات اللغة",
+  "privacy_settings": "إعدادات الخصوصية",
+  "help_support": "المساعدة والدعم",
+  "feedback_sent": "تم إرسال الملاحظات بنجاح!",
+  "something_went_wrong": "حدث خطأ ما. يرجى المحاولة لاحقاً."
+}
