--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,1 +1,102 @@
-{}
+{
+  "app_name": "Smart App",
+  "welcome": "Welcome",
+  "welcome_back": "Welcome Back",
+  "hello_user": "Hello, User!",
+  "sign_in": "Sign In",
+  "sign_up": "Sign Up",
+  "sign_out": "Sign Out",
+  "forgot_password": "Forgot Password?",
+  "reset_password": "Reset Password",
+  "email": "Email",
+  "password": "Password",
+  "confirm_password": "Confirm Password",
+  "username": "Username",
+  "phone_number": "Phone Number",
+  "address": "Address",
+  "city": "City",
+  "country": "Country",
+  "language": "Language",
+  "dark_mode": "Dark Mode",
+  "light_mode": "Light Mode",
+  "system_default": "System Default",
+  "notifications": "Notifications",
+  "privacy": "Privacy",
+  "help": "Help",
+  "security": "Security",
+  "two_factor_auth": "Two-Factor Authentication",
+  "enable_biometric": "Enable Biometric Login",
+  "location_access": "Allow Location Access",
+  "storage_permission": "Storage Permission",
+  "camera_permission": "Camera Permission",
+  "microphone_permission": "Microphone Permission",
+  "push_notifications": "Push Notifications",
+  "email_notifications": "Email Notifications",
+  "sms_notifications": "SMS Notifications",
+  "profile": "Profile",
+  "edit_profile": "Edit Profile",
+  "view_profile": "View Profile",
+  "change_password": "Change Password",
+  "delete_account": "Delete Account",
+  "account_settings": "Account Settings",
+  "app_settings": "App Settings",
+  "app_theme": "App Theme",
+  "appearance": "Appearance",
+  "font_size": "Font Size",
+  "color_scheme": "Color Scheme",
+  "feedback": "Feedback",
+  "help_center": "Help Center",
+  "faq": "Frequently Asked Questions",
+  "contact_us": "Contact Us",
+  "send_message": "Send Message",
+  "rate_app": "Rate the App",
+  "share_app": "Share App",
+  "terms_conditions": "Terms & Conditions",
+  "privacy_policy": "Privacy Policy",
+  "choose_language": "Choose Language",
+  "about_app": "About the App",
+  "version": "Version",
+  "update_available": "Update Available",
+  "download_update": "Download Update",
+  "check_for_updates": "Check for Updates",
+  "no_internet": "No Internet Connection",
+  "retry": "Retry",
+  "loading": "Loading...",
+  "save": "Save",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "ok": "OK",
+  "yes": "Yes",
+  "no": "No",
+  "next": "Next",
+  "back": "Back",
+  "done": "Done",
+  "apply": "Apply",
+  "search": "Search",
+  "filter": "Filter",
+  "sort": "Sort",
+  "open": "Open",
+  "close": "Close",
+  "error": "Error",
+  "success": "Success",
+  "warning": "Warning",
+  "info": "Information",
+  "confirm_action": "Are you sure you want to proceed?",
+  "session_expired": "Your session has expired. Please log in again.",
+  "login_failed": "Login failed. Please check your credentials.",
+  "network_error": "A network error occurred. Please try again.",
+  "upload_image": "Upload Image",
+  "take_photo": "Take a Photo",
+  "choose_from_gallery": "Choose from Gallery",
+  "submit": "Submit",
+  "continue": "Continue",
+  "view_more": "View More",
+  "view_less": "View Less",
+  "notifications_settings": "Notification Settings",
+  "general_settings": "General Settings",
+  "language_settings": "Language Settings",
+  "privacy_settings": "Privacy Settings",
+  "help_support": "Help & Support",
+  "feedback_sent": "Feedback sent successfully!",
+  "something_went_wrong": "Something went wrong. Please try again later."
+}
