Add localization support, update dependencies, and include detailed Egyptian landmarks data
- Integrated easy_localization for multilingual support in main_screen.dart.
- Updated pubspec.yaml to include cached_network_image dependency.
- Enhanced pubspec.lock with new dependencies including cached_network_image and others.
- Added egypt_landmarks_detailed.json containing comprehensive information about various Egyptian landmarks.

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,113 +1,119 @@
 {
-  "app_name": "TravelHub",
-  "Discover_Explore_Experience":" اكتشف. استكشف. اختبر.",
-  "discover_amazing_places":"اكتشف أماكن مذهلة",
-  "discover_description":"اكتشف الجواهر الخفية والوجهات الشهيرة في جميع أنحاء العالم",
-  "ai_powered_recognition":"التعريف المدعوم بالذكاء الاصطناعي",
-"ai_description":"تحديد المعالم على الفور باستخدام كاميرتنا الذكية",
-"personalized_experience":"تجربة مخصصة",
-"personalized_description":"احصل على توصيات مخصصة وفقًا لتفضيلاتك",
-  "ready_to_start_your_journey?":"هل أنت مستعد لبدء رحلتك؟",
-  "join_millions_of_travelers_exploring_the_world_with_TravelHub":"انضم إلى ملايين المسافرين الذين يستكشفون العالم مع TravelHub.",
-  "get_started": "ابدأ الآن",
- 
-  "welcome": "مرحباً",
-  "welcome_back": "مرحباً بعودتك",
-  "hello_user": "مرحباً، المستخدم!",
-  "sign_in": "تسجيل الدخول",
-  "sign_up": "إنشاء حساب",
-  "sign_out": "تسجيل الخروج",
-  "forgot_password": "هل نسيت كلمة المرور؟",
-  "reset_password": "إعادة تعيين كلمة المرور",
-  "email": "البريد الإلكتروني",
-  "password": "كلمة المرور",
-  "confirm_password": "تأكيد كلمة المرور",
-  "username": "اسم المستخدم",
-  "phone_number": "رقم الهاتف",
-  "address": "العنوان",
-  "city": "المدينة",
-  "country": "الدولة",
-  "language": "اللغة",
-  "dark_mode": "الوضع الداكن",
-  "light_mode": "الوضع الفاتح",
-  "system_default": "إعداد النظام الافتراضي",
-  "notifications": "الإشعارات",
-  "privacy": "الخصوصية",
-  "help": "المساعدة",
-  "security": "الأمان",
-  "two_factor_auth": "المصادقة الثنائية",
-  "enable_biometric": "تفعيل تسجيل الدخول بالبصمة",
-  "location_access": "السماح بالوصول إلى الموقع",
-  "storage_permission": "إذن الوصول للتخزين",
-  "camera_permission": "إذن الكاميرا",
-  "microphone_permission": "إذن الميكروفون",
-  "push_notifications": "إشعارات الدفع",
-  "email_notifications": "إشعارات البريد الإلكتروني",
-  "sms_notifications": "إشعارات الرسائل القصيرة",
-  "profile": "الملف الشخصي",
-  "edit_profile": "تعديل الملف الشخصي",
-  "view_profile": "عرض الملف الشخصي",
-  "change_password": "تغيير كلمة المرور",
-  "delete_account": "حذف الحساب",
-  "account_settings": "إعدادات الحساب",
-  "app_settings": "إعدادات التطبيق",
-  "app_theme": "سمة التطبيق",
-  "appearance": "المظهر",
-  "font_size": "حجم الخط",
-  "color_scheme": "نظام الألوان",
-  "feedback": "ملاحظات المستخدم",
-  "help_center": "مركز المساعدة",
-  "faq": "الأسئلة الشائعة",
-  "contact_us": "اتصل بنا",
-  "send_message": "إرسال رسالة",
-  "rate_app": "قيّم التطبيق",
-  "share_app": "شارك التطبيق",
-  "terms_conditions": "الشروط والأحكام",
-  "privacy_policy": "سياسة الخصوصية",
-  "choose_language": "اختر اللغة",
-  "about_app": "حول التطبيق",
-  "version": "الإصدار",
-  "update_available": "تحديث متوفر",
-  "download_update": "تنزيل التحديث",
-  "check_for_updates": "التحقق من وجود تحديثات",
-  "no_internet": "لا يوجد اتصال بالإنترنت",
-  "retry": "إعادة المحاولة",
-  "loading": "جاري التحميل...",
-  "save": "حفظ",
-  "cancel": "إلغاء",
-  "delete": "حذف",
-  "ok": "موافق",
-  "yes": "نعم",
-  "no": "لا",
-  "next": "التالي",
-  "back": "رجوع",
-  "done": "تم",
-  "apply": "تطبيق",
-  "search": "بحث",
-  "filter": "تصفية",
-  "sort": "فرز",
-  "open": "فتح",
-  "close": "إغلاق",
-  "error": "خطأ",
-  "success": "تم بنجاح",
-  "warning": "تحذير",
-  "info": "معلومة",
-  "confirm_action": "هل أنت متأكد أنك تريد المتابعة؟",
-  "session_expired": "انتهت صلاحية الجلسة. يرجى تسجيل الدخول مرة أخرى.",
-  "login_failed": "فشل تسجيل الدخول. يرجى التحقق من البيانات.",
-  "network_error": "حدث خطأ في الشبكة. حاول مرة أخرى.",
-  "upload_image": "رفع صورة",
-  "take_photo": "التقاط صورة",
-  "choose_from_gallery": "اختيار من المعرض",
-  "submit": "إرسال",
-  "continue": "متابعة",
-  "view_more": "عرض المزيد",
-  "view_less": "عرض أقل",
-  "notifications_settings": "إعدادات الإشعارات",
-  "general_settings": "الإعدادات العامة",
-  "language_settings": "إعدادات اللغة",
-  "privacy_settings": "إعدادات الخصوصية",
-  "help_support": "المساعدة والدعم",
-  "feedback_sent": "تم إرسال الملاحظات بنجاح!",
-  "something_went_wrong": "حدث خطأ ما. يرجى المحاولة لاحقاً."
+  "TravelHub": "TravelHub",
+  "Discover the world": "اكتشف العالم",
+  "Discover. Explore. Experience.": "اكتشف. استكشف. عش التجربة.",
+  "Discover Amazing Places": "اكتشف أماكن مذهلة",
+  "Find hidden gems and popular destinations worldwide": "اعثر على كنوز مخفية ووجهات شهيرة حول العالم",
+  "AI-Powered Recognition": "التعرّف بالذكاء الاصطناعي",
+  "Identify landmarks instantly with our smart camera": "تعرّف على المعالم فورًا باستخدام الكاميرا الذكية",
+  "Personalized Experience": "تجربة مخصصة",
+  "Get recommendations tailored to your preferences": "احصل على توصيات تناسب اهتماماتك",
+  "Ready to start your journey?": "جاهز تبدأ رحلتك؟",
+  "Join millions of travelers exploring the world with TravelHub": "انضم لملايين المسافرين المستكشفين للعالم مع TravelHub",
+  "Get Started": "ابدأ الآن",
+  "I already have an account": "لدي حساب بالفعل",
+  "Continue as guest": "المتابعة كزائر",
+  "Welcome Back": "مرحبًا بعودتك",
+  "Sign in to continue your journey": "سجّل الدخول لمتابعة رحلتك",
+  "Email Address": "البريد الإلكتروني",
+  "Enter your email": "أدخل بريدك الإلكتروني",
+  "Password": "كلمة المرور",
+  "Enter your password": "أدخل كلمة المرور",
+  "Forgot Password?": "نسيت كلمة المرور؟",
+  "Sign In": "تسجيل الدخول",
+  "or": "أو",
+  "Continue with Google": "المتابعة باستخدام Google",
+  "Continue with Facebook": "المتابعة باستخدام Facebook",
+  "Don't have an account?": "ليس لديك حساب؟",
+  "Sign Up": "إنشاء حساب",
+  "Join TravelHub": "انضم إلى TravelHub",
+  "Create your account to start exploring": "أنشئ حسابك لبدء الاستكشاف",
+  "Full Name": "الاسم الكامل",
+  "Enter your full name": "أدخل اسمك الكامل",
+  "Phone": "رقم الهاتف",
+  "Phone Number": "رقم الهاتف",
+  "Enter your phone number": "أدخل رقم هاتفك",
+  "Create a password": "أنشئ كلمة مرور",
+  "Confirm Password": "تأكيد كلمة المرور",
+  "Confirm your password": "أكّد كلمة المرور",
+  "Create Account": "إنشاء حساب",
+  "Sign up with Google": "إنشاء حساب باستخدام Google",
+  "Sign up with Facebook": "إنشاء حساب باستخدام Facebook",
+  "Already have an account?": "لديك حساب بالفعل؟",
+  "Welcome to TravelHub": "مرحبًا بك في TravelHub",
+  "Discover amazing places around the world": "اكتشف أماكن مذهلة حول العالم",
+  "Search destinations, hotels...": "ابحث عن وجهات، فنادق...",
+  "Home": "الرئيسية",
+  "Hotels": "فنادق",
+  "Places": "أماكن",
+  "Places to Visit": "أماكن للزيارة",
+  "Map": "الخريطة",
+  "AI Camera": "كاميرا AI  ",
+  "Settings": "الإعدادات",
+  "Nearby Attractions": "معالم قريبة",
+  "View Full Map": "عرض الخريطة بالكامل",
+  "You are here": "أنت هنا",
+  "Find your perfect stay": "اعثر على الإقامة المثالية",
+  "Hotel Details": "تفاصيل الفندق",
+  "About": "حول",
+  "Features": "المميزات",
+  "Book Now": "احجز الآن",
+  "Email": "البريد الإلكتروني",
+  "Book Your Trip": "احجز رحلتك",
+  "Complete your reservation": "أكمل الحجز",
+  "Destination": "الوجهة",
+  "Enter city or hotel name": "أدخل اسم المدينة أو الفندق",
+  "Check-in": "تسجيل الوصول",
+  "Check-out": "تسجيل المغادرة",
+  "Guests": "الضيوف",
+  "Contact Information": "معلومات الاتصال",
+  "Complete Booking": "إكمال الحجز",
+  "Discover amazing destinations": "اكتشف وجهات مذهلة",
+  "Highlights": "أبرز النقاط",
+  "AI Photo Description": "وصف الصورة بالذكاء الاصطناعي",
+  "Take a photo and get an AI-powered description with audio narration": "التقط صورة واحصل على وصف بالذكاء الاصطناعي مع سرد صوتي",
+  "Take Photo": "التقاط صورة",
+  "Search locations...": "ابحث عن مواقع...",
+  "Tourist Spots": "أماكن سياحية",
+  "Your Location": "موقعك الحالي",
+  "Edit Profile": "تعديل الملف الشخصي",
+  "Dark Mode": "الوضع الداكن",
+  "Light Mode": "الوضع الفاتح",
+  "Language": "اللغة",
+  "logout": "تسجيل الخروج",
+  "AI Analysis": "تحليل الذكاء الاصطناعي",
+  "Play Audio": "تشغيل الصوت",
+  "Share": "مشاركة",
+  "Save": "حفظ",
+  "Retake": "إعادة الالتقاط",
+  "Account created successfully!": "تم إنشاء الحساب بنجاح!",
+  "This email is already registered.": "هذا البريد مسجّل بالفعل.",
+  "Your password is too weak.": "كلمة المرور ضعيفة جدًا.",
+  "Please enter a valid email.": "يرجى إدخال بريد إلكتروني صالح.",
+  "Registration failed. Please try again.": "فشل إنشاء الحساب. يرجى المحاولة مرة أخرى.",
+  "Please enter city or hotel name": "يرجى إدخال اسم المدينة أو الفندق",
+  "Please enter a check in date": "يرجى إدخال تاريخ الوصول",
+  "Check in date can't be before today": "لا يمكن أن يكون تاريخ الوصول قبل اليوم",
+  "The date format is incorrect": "تنسيق التاريخ غير صحيح",
+  "Please enter a check out date": "يرجى إدخال تاريخ المغادرة",
+  "Check out date can't be before today": "لا يمكن أن يكون تاريخ المغادرة قبل اليوم",
+  "Please enter the number of guests": "يرجى إدخال عدد الضيوف",
+  "Please enter your full name": "يرجى إدخال اسمك الكامل",
+  "Please enter your email": "يرجى إدخال البريد الإلكتروني",
+  "Please enter a valid email": "يرجى إدخال بريد إلكتروني صالح",
+  "Please enter your phone number": "يرجى إدخال رقم هاتفك",
+  "Please enter a valid Egyptian phone number": "يرجى إدخال رقم هاتف مصري صالح",
+  "Passwords don't match": "كلمات المرور غير متطابقة",
+  "Please enter your password": "يرجى إدخال كلمة المرور",
+  "Password must be at least 6 characters": "يجب أن تكون كلمة المرور 6 أحرف على الأقل",
+  "Please confirm your password": "يرجى تأكيد كلمة المرور",
+  "No user found for that email.": "لم يتم العثور على مستخدم لهذا البريد الإلكتروني.",
+  "Wrong password provided.": "كلمة المرور المدخلة خاطئة.",
+  "Invalid email address.": "عنوان البريد الإلكتروني غير صالح.",
+  "Login failed. Please try again.": "فشل تسجيل الدخول. يرجى المحاولة مرة أخرى.",
+  "EGP": "جنيه مصري",
+  "per night": "لكل ليلة",
+  "reviews": "التقييمات",
+  "Price per night": "سعر الليلة",
+  "See more": "المزيد"
 }
