--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,114 +1,120 @@
 {
-  "app_name": "TravelHub",
-  "Discover_Explore_Experience":"Discover. Explore. Experience.",
-  "discover_amazing_places":"Discover Amazing Places",
-  "discover_description":"Find hidden gems and popular destinations worldwide",
-   "ai_powered_recognition":"AI-Powered Recognition",
-  "ai_description":"Identify landmarks instantly with our smart camera",
-  "personalized_experience":"Personalized Experience",
-  "personalized_description":"Get recommendations tailored to your preferences",
-  "ready_to_start_your_journey?":"Ready to start your journey?",
-  "join_millions_of_travelers_exploring_the_world_with_TravelHub":"Join millions of travelers exploring the world with TravelHub.",
-  "get_started": "Get Started",
-  
-  
-  "welcome": "Welcome",
-  "welcome_back": "Welcome Back",
-  "hello_user": "Hello, User!",
-  "sign_in": "Sign In",
-  "sign_up": "Sign Up",
-  "sign_out": "Sign Out",
-  "forgot_password": "Forgot Password?",
-  "reset_password": "Reset Password",
-  "email": "Email",
-  "password": "Password",
-  "confirm_password": "Confirm Password",
-  "username": "Username",
-  "phone_number": "Phone Number",
-  "address": "Address",
-  "city": "City",
-  "country": "Country",
-  "language": "Language",
-  "dark_mode": "Dark Mode",
-  "light_mode": "Light Mode",
-  "system_default": "System Default",
-  "notifications": "Notifications",
-  "privacy": "Privacy",
-  "help": "Help",
-  "security": "Security",
-  "two_factor_auth": "Two-Factor Authentication",
-  "enable_biometric": "Enable Biometric Login",
-  "location_access": "Allow Location Access",
-  "storage_permission": "Storage Permission",
-  "camera_permission": "Camera Permission",
-  "microphone_permission": "Microphone Permission",
-  "push_notifications": "Push Notifications",
-  "email_notifications": "Email Notifications",
-  "sms_notifications": "SMS Notifications",
-  "profile": "Profile",
-  "edit_profile": "Edit Profile",
-  "view_profile": "View Profile",
-  "change_password": "Change Password",
-  "delete_account": "Delete Account",
-  "account_settings": "Account Settings",
-  "app_settings": "App Settings",
-  "app_theme": "App Theme",
-  "appearance": "Appearance",
-  "font_size": "Font Size",
-  "color_scheme": "Color Scheme",
-  "feedback": "Feedback",
-  "help_center": "Help Center",
-  "faq": "Frequently Asked Questions",
-  "contact_us": "Contact Us",
-  "send_message": "Send Message",
-  "rate_app": "Rate the App",
-  "share_app": "Share App",
-  "terms_conditions": "Terms & Conditions",
-  "privacy_policy": "Privacy Policy",
-  "choose_language": "Choose Language",
-  "about_app": "About the App",
-  "version": "Version",
-  "update_available": "Update Available",
-  "download_update": "Download Update",
-  "check_for_updates": "Check for Updates",
-  "no_internet": "No Internet Connection",
-  "retry": "Retry",
-  "loading": "Loading...",
-  "save": "Save",
-  "cancel": "Cancel",
-  "delete": "Delete",
-  "ok": "OK",
-  "yes": "Yes",
-  "no": "No",
-  "next": "Next",
-  "back": "Back",
-  "done": "Done",
-  "apply": "Apply",
-  "search": "Search",
-  "filter": "Filter",
-  "sort": "Sort",
-  "open": "Open",
-  "close": "Close",
-  "error": "Error",
-  "success": "Success",
-  "warning": "Warning",
-  "info": "Information",
-  "confirm_action": "Are you sure you want to proceed?",
-  "session_expired": "Your session has expired. Please log in again.",
-  "login_failed": "Login failed. Please check your credentials.",
-  "network_error": "A network error occurred. Please try again.",
-  "upload_image": "Upload Image",
-  "take_photo": "Take a Photo",
-  "choose_from_gallery": "Choose from Gallery",
-  "submit": "Submit",
-  "continue": "Continue",
-  "view_more": "View More",
-  "view_less": "View Less",
-  "notifications_settings": "Notification Settings",
-  "general_settings": "General Settings",
-  "language_settings": "Language Settings",
-  "privacy_settings": "Privacy Settings",
-  "help_support": "Help & Support",
-  "feedback_sent": "Feedback sent successfully!",
-  "something_went_wrong": "Something went wrong. Please try again later."
+  "TravelHub": "TravelHub",
+  "Discover the world": "Discover the world",
+  "Discover. Explore. Experience.": "Discover. Explore. Experience.",
+  "Discover Amazing Places": "Discover Amazing Places",
+  "Find hidden gems and popular destinations worldwide": "Find hidden gems and popular destinations worldwide",
+  "AI-Powered Recognition": "AI-Powered Recognition",
+  "Identify landmarks instantly with our smart camera": "Identify landmarks instantly with our smart camera",
+  "Personalized Experience": "Personalized Experience",
+  "Get recommendations tailored to your preferences": "Get recommendations tailored to your preferences",
+  "Ready to start your journey?": "Ready to start your journey?",
+  "Join millions of travelers exploring the world with TravelHub": "Join millions of travelers exploring the world with TravelHub",
+  "Get Started": "Get Started",
+  "I already have an account": "I already have an account",
+  "Continue as guest": "Continue as guest",
+  "Welcome Back": "Welcome Back",
+  "Sign in to continue your journey": "Sign in to continue your journey",
+  "Email Address": "Email Address",
+  "Enter your email": "Enter your email",
+  "Password": "Password",
+  "Enter your password": "Enter your password",
+  "Forgot Password?": "Forgot Password?",
+  "Sign In": "Sign In",
+  "or": "or",
+  "Continue with Google": "Continue with Google",
+  "Continue with Facebook": "Continue with Facebook",
+  "Don't have an account?": "Don't have an account?",
+  "Sign Up": "Sign Up",
+  "Join TravelHub": "Join TravelHub",
+  "Create your account to start exploring": "Create your account to start exploring",
+  "Full Name": "Full Name",
+  "Enter your full name": "Enter your full name",
+  "Phone": "Phone",
+  "Phone Number": "Phone Number",
+  "Enter your phone number": "Enter your phone number",
+  "Create a password": "Create a password",
+  "Confirm Password": "Confirm Password",
+  "Confirm your password": "Confirm your password",
+  "Create Account": "Create Account",
+  "Sign up with Google": "Sign up with Google",
+  "Sign up with Facebook": "Sign up with Facebook",
+  "Already have an account?": "Already have an account?",
+  "Welcome to TravelHub": "Welcome to TravelHub",
+  "Discover amazing places around the world": "Discover amazing places around the world",
+  "Search destinations, hotels...": "Search destinations, hotels...",
+  "Home": "Home",
+  "Hotels": "Hotels",
+  "Places": "Places",
+  "Places to Visit": "Places to Visit",
+  "Map": "Map",
+  "AI Camera": "AI Camera",
+  "Settings": "Settings",
+  "Nearby Attractions": "Nearby Attractions",
+  "View Full Map": "View Full Map",
+  "You are here": "You are here",
+  "Find your perfect stay": "Find your perfect stay",
+  "Hotel Details": "Hotel Details",
+  "About": "About",
+  "Features": "Features",
+  "Book Now": "Book Now",
+  "Book Your Trip": "Book Your Trip",
+  "Complete your reservation": "Complete your reservation",
+  "Destination": "Destination",
+  "Enter city or hotel name": "Enter city or hotel name",
+  "Check-in": "Check-in",
+  "Check-out": "Check-out",
+  "Guests": "Guests",
+  "Email": "Email",
+  "Contact Information": "Contact Information",
+  "Complete Booking": "Complete Booking",
+  "Discover amazing destinations": "Discover amazing destinations",
+  "Highlights": "Highlights",
+  "AI Photo Description": "AI Photo Description",
+  "Take a photo and get an AI-powered description with audio narration": "Take a photo and get an AI-powered description with audio narration",
+  "Take Photo": "Take Photo",
+  "Search locations...": "Search locations...",
+  "Tourist Spots": "Tourist Spots",
+  "Your Location": "Your Location",
+  "Edit Profile": "Edit Profile",
+  "Dark Mode": "Dark Mode",
+  "Light Mode": "Light Mode",
+  "Language": "Language",
+  "logout": "logout",
+  "AI Analysis": "AI Analysis",
+  "Play Audio": "Play Audio",
+  "Share": "Share",
+  "Save": "Save",
+  "Retake": "Retake",
+  "Account created successfully!": "Account created successfully!",
+  "This email is already registered.": "This email is already registered.",
+  "Your password is too weak.": "Your password is too weak.",
+  "Please enter a valid email.": "Please enter a valid email.",
+  "Registration failed. Please try again.": "Registration failed. Please try again.",
+  "Please enter city or hotel name": "Please enter city or hotel name",
+  "Please enter a check in date": "Please enter a check in date",
+  "Check in date can't be before today": "Check in date can't be before today",
+  "The date format is incorrect": "The date format is incorrect",
+  "Please enter a check out date": "Please enter a check out date",
+  "Check out date can't be before today": "Check out date can't be before today",
+  "Please enter the number of guests": "Please enter the number of guests",
+  "Please enter your full name": "Please enter your full name",
+  "Please enter your email": "Please enter your email",
+  "Please enter a valid email": "Please enter a valid email",
+  "Please enter your phone number": "Please enter your phone number",
+  "Please enter a valid Egyptian phone number": "Please enter a valid Egyptian phone number",
+  "Passwords don't match": "Passwords don't match",
+  "Please enter your password": "Please enter your password",
+  "Password must be at least 6 characters": "Password must be at least 6 characters",
+  "Please confirm your password": "Please confirm your password",
+  "No user found for that email.": "No user found for that email.",
+  "Wrong password provided.": "Wrong password provided.",
+  "Invalid email address.": "Invalid email address.",
+  "Login failed. Please try again.": "Login failed. Please try again.",
+  "EGP": "EGP",
+  "per night": "per night",
+  "reviews": "reviews",
+  "Price per night": "Price per night",
+  "See more": "See more"
 }
+
