--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -115,5 +115,12 @@
   "per night": "لكل ليلة",
   "reviews": "التقييمات",
   "Price per night": "سعر الليلة",
-  "See more": "المزيد"
+  "See more": "المزيد",
+  "Camera": "الكاميرا",
+  "Gallery": "المعرض",
+  "Share":"مشاركة",
+  "Play Audio": "تشغيل الصوت",
+  "Save": "حفظ",
+  "Retake": "إعادة الالتقاط"
+
 }
