--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -115,6 +115,12 @@
   "per night": "per night",
   "reviews": "reviews",
   "Price per night": "Price per night",
-  "See more": "See more"
+  "See more": "See more",
+  "Camera": "Camera",
+  "Gallery": "Gallery",
+  "Share":"Share",
+  "Play Audio": "Play Audio",
+  "Save": "Save",
+  "Retake": "Retake"
 }
 
