Add localization support, enhance UI components, and refactor navigation logic

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -133,6 +133,8 @@
   "support": "الدعم",
   "help": "المساعدة",
   "more": "المزيد",
-  "about_us": " من نحن"
+  "about_us": " من نحن",
+   "Profile picture has been updated successfully":"تم تحديث صورة البروفايل بنجاح",
+  "Favorites":"المفضلة"
 
 }
